--- a/words/len-pi-laso-telo.html
+++ b/words/len-pi-laso-telo.html
@@ -1,104 +1,135 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: len pi laso telo</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        </style></head>
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+            @media only screen and (max-width: 800px) {
+            body{display: inline-block;
+            width: 100vw; height: 100vh;
+            background-color: var(--light-gray);}
 
-    <body><div class="page"><div class="main">
-        <h1>len pi laso telo</h1>
-        ← <a class="back" href="/website/words">back</a>
+            .sidebar{display: none}
+
+            .navbar{display:inline-block}
+
+            .main{padding: 16px 24px; margin: 0 16px; 
+            min-height: calc(100vh - 32px);
+            background-color: var(--white)}
+        }
+
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/words">longer texts</a></p>
+            <ul>
+                <li><b>len pi laso telo</b></li>
+                <li><a href="tomo-pi-esun-lipu">tomo pi esun lipu</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>len pi laso telo</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/words">back to longer texts</a></summary>
+            <b>len pi laso telo</b> . 
+            <a href="tomo-pi-esun-lipu">tomo pi esun lipu</a>
+        </details>
+
         <p>
-        toki a.
-        <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
-        <br>tenpo pini poka la, telo sewi mute li lon.
-        <br>kalama mute li lon.
-        <br>kalama suli li lon.
-        <br>
-        <br>tenpo ni la, kon li lete li tawa suli.
-        <br>kon li tawa e linja lawa mi.
-        <br>telo sewi la, len pi laso telo li lon lupa.
-        <br>ona li awen e jan tan telo sewi.
-        <br>kon tawa li tawa suli e len.
-        <br>tomo tawa telo suli ante li lon, li pali e kalama suli kin.
-        <br>
-        <br>supa awen mi li laso telo, li ike tawa sijelo mi a.
-        <br>tomo tawa telo suli li tawa suli, kepeken tenpo suli.
-        <br>kalama sewi li lon kin.
-        <br>jan esun li wile esun e ijo...
-        <br>mi ken kute e ona.
-        <br>wa, tawa pi tomo tawa telo li suli!
-        <br>
-        <br>ante la, sewi li walo.
-        <br>telo li kapesi.
-        <br>kalama pi suli mute li lon, li toki e ni: o kama lon tomo tawa telo!
-        <br>tomo tawa telo li tawa..
-        <br>li weka tan ma...
-        <br>telo li tawa....
-        <br>
-        <br>sewi walo li open, li pana lukin e laso telo lili.
-        <br>wa, mi ken lukin e tomo, laso, walo, kapesi, sewi pi pimeja walo, telo sewi pi tenpo kama.
-        <br>mi ken lukin e tomo tawa telo ante a!
-        <br>ona li lon ma, li kepeken ala, li majuna, li pakala...
-        <br>
-        <br>wa, mi ken lukin e telo sewi, ona li kama kepeken tenpo pi lili mute a!
-        <br>ona li kon e lukin!
-        <br>telo li kama pimeja a
-        <br>telo sewi li kama wawa, li pali e kalama suli!
-        <br>ni la kon li tawa suli, li tawa e len pi laso telo!
-        <br>
-        <br>kin la, telo anpa li tawa suli, li jo e kipisi walo, li pali e kalama... pona...
-        <br>len pi laso telo li lon la insa pi tomo tawa telo li kama pimeja a
-        <br>ilo suno li lon.
-        <br>ni li musi mute tawa mi a
-        <br>mi kute e kalama musi, tan jan Kamelon Lu (<i>Cameron Lew</i>), kalama musi ona li pona li musi li puwa a!
-        <br>
-        <br>tomo li lili lukin mute a a a
-        <br>kin la, kalama pi kulupu Akale Wupe (<i>Akalé Wubé</i>), kalama usi ona li pona mute kin...
-        <br>sinpin la sewi li pimeja li monsuta.
-        <br>telo sewi li weka, taso sewi pimeja li toki e telo sewi kama.
-        <br>poka mi la kasi suli mute li lon.
-        <br>ona li lili lukin, taso lon la ona li suli mute a.
-        <br>a, kon li tawa mute e telo; ni li pona mute tawa mi a
-        <br>
-        <br>taso, tomo tawa telo li tawa lili a...
-        <br>ni la tawa li pini? ala a a a
-        <br>mi wile tawa lon tomo tawa pi jan mute a.
-        <br>mi weka tan tomo tawa telo, telo sewi li lon, kon li tawa wawa.
-        <br>mi tawa tomo tawa pi jan mute.
-        <br>jan mute li lon, jan ante li lon.
-        <br>
-        <br>a... kon li lete, kalama musi li lon, kalama pi telo sewi li lon...
-        <br>telo li tawa lon lupa...
-        <br>kon pi tawa ni li pona mute mute tawa mi a...
-        <br>
-        <br>tomo tawa li tawa a!
-        <br>li tawa wawa mute a.
-        <br>mi ken lukin e kasi suli mute...
-        <br>ona li tawa wawa mute aaa
-        <br>kin la mi ken lukin e tomo lon poka kasi...
-        <br>tomo ni li pona lukin tawa mi a.
-        <br>lon lon tomo ni li sama seme?
-        <br>
-        <br>mi ken lukin e linja telo. telo sewi li kon e lukin a...
-        <br>insa pi tomo tawa li kama pimeja a...
-        <br>kon ni li pona mute tawa mi a~
-        <br>mi o lukin e kasi mute, e telo sewi mute, e nasin mute...
-        <br>o... lape...</p>
-        <hr style="width: 50%;">
-        <p>
-        wa!
-        <br>sewi li kama pimeja suli a...
-        <br>mi pilin lape...
-        <br>nasin li jo e telo mute a...
-        <br>mi kama lon tomo suli pi tomo tawa...
-        <br>jan mute ala li lon...
-        <br>tenpo kama poka la, mi lon tomo pi jan majuna mi.
-        <br>ni la toki mi li pini.
-        <br>ken la, mi toki lon suno kama.
-        <br>mi tawa a...</p>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+            toki a.
+            <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
+            <br>tenpo pini poka la, telo sewi mute li lon.
+            <br>kalama mute li lon.
+            <br>kalama suli li lon.
+            <br>
+            <br>tenpo ni la, kon li lete li tawa suli.
+            <br>kon li tawa e linja lawa mi.
+            <br>telo sewi la, len pi laso telo li lon lupa.
+            <br>ona li awen e jan tan telo sewi.
+            <br>kon tawa li tawa suli e len.
+            <br>tomo tawa telo suli ante li lon, li pali e kalama suli kin.
+            <br>
+            <br>supa awen mi li laso telo, li ike tawa sijelo mi a.
+            <br>tomo tawa telo suli li tawa suli, kepeken tenpo suli.
+            <br>kalama sewi li lon kin.
+            <br>jan esun li wile esun e ijo...
+            <br>mi ken kute e ona.
+            <br>wa, tawa pi tomo tawa telo li suli!
+            <br>
+            <br>ante la, sewi li walo.
+            <br>telo li kapesi.
+            <br>kalama pi suli mute li lon, li toki e ni: o kama lon tomo tawa telo!
+            <br>tomo tawa telo li tawa..
+            <br>li weka tan ma...
+            <br>telo li tawa....
+            <br>
+            <br>sewi walo li open, li pana lukin e laso telo lili.
+            <br>wa, mi ken lukin e tomo, laso, walo, kapesi, sewi pi pimeja walo, telo sewi pi tenpo kama.
+            <br>mi ken lukin e tomo tawa telo ante a!
+            <br>ona li lon ma, li kepeken ala, li majuna, li pakala...
+            <br>
+            <br>wa, mi ken lukin e telo sewi, ona li kama kepeken tenpo pi lili mute a!
+            <br>ona li kon e lukin!
+            <br>telo li kama pimeja a
+            <br>telo sewi li kama wawa, li pali e kalama suli!
+            <br>ni la kon li tawa suli, li tawa e len pi laso telo!
+            <br>
+            <br>kin la, telo anpa li tawa suli, li jo e kipisi walo, li pali e kalama... pona...
+            <br>len pi laso telo li lon la insa pi tomo tawa telo li kama pimeja a
+            <br>ilo suno li lon.
+            <br>ni li musi mute tawa mi a
+            <br>mi kute e kalama musi, tan jan Kamelon Lu (<i>Cameron Lew</i>), kalama musi ona li pona li musi li puwa a!
+            <br>
+            <br>tomo li lili lukin mute a a a
+            <br>kin la, kalama pi kulupu Akale Wupe (<i>Akalé Wubé</i>), kalama usi ona li pona mute kin...
+            <br>sinpin la sewi li pimeja li monsuta.
+            <br>telo sewi li weka, taso sewi pimeja li toki e telo sewi kama.
+            <br>poka mi la kasi suli mute li lon.
+            <br>ona li lili lukin, taso lon la ona li suli mute a.
+            <br>a, kon li tawa mute e telo; ni li pona mute tawa mi a
+            <br>
+            <br>taso, tomo tawa telo li tawa lili a...
+            <br>ni la tawa li pini? ala a a a
+            <br>mi wile tawa lon tomo tawa pi jan mute a.
+            <br>mi weka tan tomo tawa telo, telo sewi li lon, kon li tawa wawa.
+            <br>mi tawa tomo tawa pi jan mute.
+            <br>jan mute li lon, jan ante li lon.
+            <br>
+            <br>a... kon li lete, kalama musi li lon, kalama pi telo sewi li lon...
+            <br>telo li tawa lon lupa...
+            <br>kon pi tawa ni li pona mute mute tawa mi a...
+            <br>
+            <br>tomo tawa li tawa a!
+            <br>li tawa wawa mute a.
+            <br>mi ken lukin e kasi suli mute...
+            <br>ona li tawa wawa mute aaa
+            <br>kin la mi ken lukin e tomo lon poka kasi...
+            <br>tomo ni li pona lukin tawa mi a.
+            <br>lon lon tomo ni li sama seme?
+            <br>
+            <br>mi ken lukin e linja telo. telo sewi li kon e lukin a...
+            <br>insa pi tomo tawa li kama pimeja a...
+            <br>kon ni li pona mute tawa mi a~
+            <br>mi o lukin e kasi mute, e telo sewi mute, e nasin mute...
+            <br>o... lape...</p>
+            <hr style="width: 50%;">
+            <p>
+            wa!
+            <br>sewi li kama pimeja suli a...
+            <br>mi pilin lape...
+            <br>nasin li jo e telo mute a...
+            <br>mi kama lon tomo suli pi tomo tawa...
+            <br>jan mute ala li lon...
+            <br>tenpo kama poka la, mi lon tomo pi jan majuna mi.
+            <br>ni la toki mi li pini.
+            <br>ken la, mi toki lon suno kama.
+            <br>mi tawa a...</p>
+        </div>
+    </body>
+</html>
