--- a/words/tomo-pi-esun-lipu.html
+++ b/words/tomo-pi-esun-lipu.html
@@ -5,6 +5,20 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: tomo pi esun lipu</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+            @media only screen and (max-width: 800px) {
+            body{display: inline-block;
+            width: 100vw; height: 100vh;
+            background-color: var(--light-gray);}
+
+            .sidebar{display: none}
+
+            .navbar{display:inline-block}
+
+            .main{padding: 16px 24px; margin: 0 16px; 
+            min-height: calc(100vh - 32px);
+            background-color: var(--white)}
+        }
+
         </style>
     </head>
 
@@ -13,7 +27,7 @@
             <div>
             <p><a href="/website/words">longer texts</a></p>
             <ul>
-                <li><a href="len-pi-laso-telo.html">len pi laso telo</a></li>
+                <li><a href="len-pi-laso-telo">len pi laso telo</a></li>
                 <li><b>tomo pi esun lipu</b></li>
             </ul></div>
         </div>
@@ -23,7 +37,7 @@
     
         <details class="navbar">
             <summary><a href="/website/words">back to longer texts</a></summary>
-            <a href="len-pi-laso-telo.html">len pi laso telo</a> . 
+            <a href="len-pi-laso-telo">len pi laso telo</a> . 
             <b>tomo pi esun lipu</b>
         </details>
 
