--- a/words/len-pi-laso-telo.html
+++ b/words/len-pi-laso-telo.html
@@ -16,7 +16,8 @@
 
             .main{padding: 16px 24px; margin: 0 16px; 
             min-height: calc(100vh - 32px);
-            background-color: var(--white)}
+            background-color: var(--white);
+            width: calc(100vw - 80px)}
         }
 
         </style>
