--- a/words/tomo-pi-esun-lipu.html
+++ b/words/tomo-pi-esun-lipu.html
@@ -14,7 +14,7 @@
 
             .navbar{display:inline-block}
 
-            .main{padding: 16px 24px; margin: 0 16px; 
+            .main{padding: 16px 24px; margin: 0 auto; 
             min-height: calc(100vh - 32px);
             background-color: var(--white);
             width: calc(100vw - 80px)}
