--- a/words/tomo-pi-esun-lipu.html
+++ b/words/tomo-pi-esun-lipu.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: tomo pi esun lipu</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .sidebar div{padding: 24px}
+            .sidebar div{margin: 24px}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
             width: 100vw; height: 100vh;
