--- a/home.html
+++ b/home.html
@@ -18,9 +18,11 @@
             #entry a{text-decoration-thickness: 1px;}
             .topbar{display: none}
 
-            h1{font-size: 11vw; text-decoration: underline 5px; line-height: 1.25}
-            @media only screen and (min-width: 455px) and (max-width: 810px){
-            h1{font-size: 6.56vw}}
+            .sidebar{width: 400px; padding: 16px 24px}
+
+            #statuscafe{margin: 0}
+
+            h1{font-size: 4.1vw; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
             width: 100vw; height: 100vh;
