--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 
             .sidebar{display: none}
 
-            .navbar{display:inline-block}
+            .topbar{display:inline-block}
 
             .main{padding: 16px 24px; margin: 0 16px; 
             min-height: calc(100vh - 32px);
