--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
             #statuscafe{margin: 0}
 
-            h1{font-size: 4.1vw; text-decoration: underline 5px; line-height: 1.2}
+            h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
             width: 100vw; height: 100vh;
