--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
             .sidebar{width: 400px; padding: 16px 24px}
 
-            #statuscafe{margin: 0}
+            #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
             h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
@@ -40,17 +40,26 @@
 
     <body>
         <div class="sidebar">
-    <h1>nowhere in particular.</h1>
-    <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
-    I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-    Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
-    around and explore, however small this site may be.<br>
-    <details><summary style="font-weight: bold">current status</summary>
-        <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
-    </div>
+        <h1>nowhere in particular.</h1>
+        <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
+        I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
+        Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
+        around and explore, however small this site may be.</p><br>
+        <details><summary style="font-weight: bold">current status</summary>
+            <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
+        </div>
 
     <div class="main">
-        <div class="topbar"></div>
+    <div class="topbar">
+        <h1>nowhere in particular.</h1>
+        <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
+        I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
+        Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
+        around and explore, however small this site may be.</p><br>
+        <details><summary style="font-weight: bold">current status</summary>
+            <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
+        </div>
+        </div>
 
         <div><a href="about"     title="me and what i like to do"                   >about</a></div>
         <div><a href="musicians" title="good music people"                          >musicians</a></div>
