--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 
             .topbar{display:inline-block}
 
-            .main{padding: 16px 24px; margin: 0 16px; 
+            .main{padding: 16px 24px 0 24px; margin: 0 auto; 
             min-height: calc(100vh - 32px);
             background-color: var(--white)}}
         </style></head>
