--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             #entry a{text-decoration-thickness: 1px;}
             .topbar{display: none}
 
-            .sidebar{width: 400px; padding: 16px 24px}
+            .sidebar{width: 400px; padding: 16px 24px 0 24px}
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
@@ -33,7 +33,7 @@
 
             .topbar{display:inline-block}
 
-            .main{padding: 16px 24px 0 24px; margin: 0 auto; 
+            .main{padding: 16px 24px; margin: 0 auto; 
             min-height: calc(100vh - 32px);
             background-color: var(--white)}}
         </style></head>
