--- a/home.html
+++ b/home.html
@@ -18,7 +18,8 @@
             #entry a{text-decoration-thickness: 1px;}
             .topbar{display: none}
 
-            .sidebar{width: 400px; padding: 16px 24px 0 24px}
+            .sidebar{width: 400px; padding: 16px 24px}
+            .main{padding: 24px 0}
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
