--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             .topbar{display: none}
 
             .sidebar{width: 400px; padding: 16px 24px}
-            .main{padding: 24px 0}
+            .main{padding: 0 24px}
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
