--- a/home.html
+++ b/home.html
@@ -19,10 +19,12 @@
             .topbar{display: none}
 
             .sidebar{width: 400px; padding: 16px 24px}
-            .main{padding: 0 24px}
+            .main{padding: 0 24px; margin: auto}
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
+            .links a{font-size: 2rem}
+            
             h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
@@ -56,15 +58,17 @@
         around and explore, however small this site may be.</p></div>
 
         <details><summary style="font-weight: bold">current status</summary>
-            <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
-        <div><a href="about"     title="me and what i like to do"                   >about</a></div>
-        <div><a href="musicians" title="good music people"                          >musicians</a></div>
-        <div><a href="websites"  title="cool websites"              class="websites">websites</a></div>
-        <div><a href="words"     title="poems and texts and things" class="words"   >words</a></div>
-        <div><a href="doodles"   title="stuff i drew"               class="i"       >doodles</a></div>
-        <div><a href="blender"   title="3d renders in blender"                      >blender</a></div>
-        <div><a href="misc"      title="general miscellanea"        class="misc"    >misc</a></div>
-        <div><a href="buttons"   title="other folks' sites"         class="buttons" >buttons</a></div>
-        <div><a href="sitelog"   title="what's changed"             class="log"     >sitelog</a></div>
+            <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details><br>
+        <div class="links">
+        <a href="about"     title="me and what i like to do"                   >about</a>
+        <a href="musicians" title="good music people"                          >musicians</a>
+        <a href="websites"  title="cool websites"              class="websites">websites</a>
+        <a href="words"     title="poems and texts and things" class="words"   >words</a>
+        <a href="doodles"   title="stuff i drew"               class="i"       >doodles</a>
+        <a href="blender"   title="3d renders in blender"                      >blender</a>
+        <a href="misc"      title="general miscellanea"        class="misc"    >misc</a>
+        <a href="buttons"   title="other folks' sites"         class="buttons" >buttons</a>
+        <a href="sitelog"   title="what's changed"             class="log"     >sitelog</a>
+        </div>
     </div>
 </body>
