--- a/home.html
+++ b/home.html
@@ -60,14 +60,14 @@
         <details><summary style="font-weight: bold">current status</summary>
             <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details><br>
         <div class="links">
-        <a href="about"     title="me and what i like to do"                   >about</a>
-        <a href="musicians" title="good music people"                          >musicians</a>
-        <a href="websites"  title="cool websites"              class="websites">websites</a>
-        <a href="words"     title="poems and texts and things" class="words"   >words</a>
-        <a href="doodles"   title="stuff i drew"               class="i"       >doodles</a>
-        <a href="blender"   title="3d renders in blender"                      >blender</a>
-        <a href="misc"      title="general miscellanea"        class="misc"    >misc</a>
-        <a href="buttons"   title="other folks' sites"         class="buttons" >buttons</a>
+        <a href="about"     title="me and what i like to do"                   >about</a><br>
+        <a href="musicians" title="good music people"                          >musicians</a><br>
+        <a href="websites"  title="cool websites"              class="websites">websites</a><br>
+        <a href="words"     title="poems and texts and things" class="words"   >words</a><br>
+        <a href="doodles"   title="stuff i drew"               class="i"       >doodles</a><br>
+        <a href="blender"   title="3d renders in blender"                      >blender</a><br>
+        <a href="misc"      title="general miscellanea"        class="misc"    >misc</a><br>
+        <a href="buttons"   title="other folks' sites"         class="buttons" >buttons</a><br>
         <a href="sitelog"   title="what's changed"             class="log"     >sitelog</a>
         </div>
     </div>
