--- a/home.html
+++ b/home.html
@@ -19,10 +19,11 @@
             .topbar{display: none}
 
             .sidebar{width: 400px; padding: 16px 24px}
-            .main{padding: 0 24px; margin: auto}
+            .main{padding: 0 24px; margin: auto 0 auto 48px}
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
+            .links{padding-left: 24px}
             .links a{font-size: 2rem}
             
             h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
@@ -38,7 +39,8 @@
 
             .main{padding: 16px 24px; margin: 0 auto; 
             min-height: calc(100vh - 32px);
-            background-color: var(--white)}}
+            background-color: var(--white);
+            width: calc(100vw - 80px)}}
         </style></head>
 
     <body>
