--- a/home.html
+++ b/home.html
@@ -7,13 +7,13 @@
         <title>nowhere in particular</title>
         <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
             a.buttons:hover{background-color: #7ba0cc; 
-            text-decoration-color:#7ba0cc; color: #101010; }
+            text-decoration-color:#7ba0cc; color: #101010; border-color: #101010}
             a.misc:hover{background-color: #101010;
-            text-decoration-color: #101010; color: #15c405}
+            text-decoration-color: #101010; color: #15c405; border-color: #15c405}
             a.log:hover{background-color: #202020;
-            text-decoration-color: #202020; color: #ffa900}
+            text-decoration-color: #202020; color: #ffa900; border-color: #ffa900}
             a.websites:hover{background-color: #201868;
-            text-decoration-color: #201868; color: #f2cf68}
+            text-decoration-color: #201868; color: #f2cf68; border-color: #f2cf68}
             a{text-decoration-thickness: 3px; font-weight: normal;}
             #entry a{text-decoration-thickness: 1px;}
             .topbar{display: none}
@@ -23,8 +23,8 @@
 
             #statuscafe, #statuscafe-username, #statuscafe-content{margin: 0}
 
-            .links{padding-left: 24px}
-            .links a{font-size: 2rem}
+            .links{padding-left: 24px; line-height: 1.8}
+            .links a{font-size: 2rem; padding: 6px; padding-left: 12px; border-left: solid #404040 2px}
             
             h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
