--- a/home.html
+++ b/home.html
@@ -26,12 +26,12 @@
             .links{padding-left: 24px; line-height: 1.8}
             .links a{font-size: 2rem; padding: 6px 12px; border-left: solid #404040 4px}
 
-            h1{font-size: min(4.5rem, 14vw); text-decoration: underline 5px; line-height: 1.2}
+            h1{font-size: 4.5rem; text-decoration: underline 5px; line-height: 1.2}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
             width: 100vw; height: 100vh;
             background-color: var(--light-gray);}
-            h1{font-size: 3.6rem}
+            h1{font-size: min(3.6rem, 14vw)}
 
             .sidebar{display: none}
 
