--- a/home.html
+++ b/home.html
@@ -5,8 +5,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .page{width: min(90%, 45rem)}
+        <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+            body{background-color: #d4d4d4}
+            .page{width: min(90%, 45rem); background-color: #f0f0f0; border: none}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#7ba0cc; color: #101010; }
             a.misc:hover{background-color: #101010;
