--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <title>nowhere in particular</title>
         <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #d4d4d4}
-            .page{width: min(90%, 45rem); background-color: #f0f0f0; border: none}
+            .page{width: min(90%, 45rem); background-color: #f0f0f0; border: none; margin: 0 auto}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#7ba0cc; color: #101010; }
             a.misc:hover{background-color: #101010;
@@ -20,6 +20,7 @@
             #entry a{text-decoration-thickness: 1px;}
             .summary{text-align: center}
 
+            .main{padding: 12px; max-width: auto}
             h1{font-size: 11vw; text-decoration: underline 5px; line-height: 1.25}
             .summary div{display: block; font-size:x-large}
             @media only screen and (min-width: 650px){
