--- a/home.html
+++ b/home.html
@@ -20,13 +20,13 @@
             #entry a{text-decoration-thickness: 1px;}
             .summary{text-align: center}
 
-            .main{padding: 12px; max-width: auto}
+            .main{padding: 16px 24px; max-width: none}
             h1{font-size: 11vw; text-decoration: underline 5px; line-height: 1.25}
             .summary div{display: block; font-size:x-large}
             @media only screen and (min-width: 650px){
             .summary div{display: inline; font-size:xx-large; }
             .summary div:not(:last-child)::after{content: " . "};
-            .main{position: absolute}}
+            .main{position: absolute; padding: 16px 24px; max-width: none}}
             @media only screen and (min-width: 455px) and (max-width: 810px){
             h1{font-size: 6.56vw}}
             @media only screen and (min-width: 810px) {
