changed sitelog and journal

--- a/sitelog.html
+++ b/sitelog.html
@@ -64,6 +64,9 @@
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
         <br>and that's it! enjoy the sitelog ig</p></details>
     <div id="entry">
+        <h2>14/3/2023 15:48</h2>
+        <p>I added the sidebar back to (most) of the pages!</p> 
+    </div><div id="entry">
         <h2>24/2/2023 18:43</h2>
         <p>I've added <a href="words/nothing">a blog thing</a>! It only has one entry, but (hopefully) i'll write more for it in the future.</p> 
     </div><div id="entry">
