--- a/home.html
+++ b/home.html
@@ -23,10 +23,10 @@
             .main{padding: 16px 24px; max-width: none}
             h1{font-size: 11vw; text-decoration: underline 5px; line-height: 1.25}
             .summary div{display: block; font-size:x-large}
-            @media only screen and (min-width: 650px){
+            @media only screen and (min-width: 600px){
             .summary div{display: inline; font-size:xx-large; }
             .summary div:not(:last-child)::after{content: " . "};
-            .main{position: absolute; padding: 16px; max-width: none}}
+            .main{position: absolute; max-width: none}}
             @media only screen and (min-width: 455px) and (max-width: 810px){
             h1{font-size: 6.56vw}}
             @media only screen and (min-width: 810px) {
