--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             @media only screen and (min-width: 800px){
             .summary div{display: inline; font-size:xx-large; }
             .summary div:not(:last-child)::after{content: " . "};
-            .main{position: absolute; max-width: none; padding: 16px}}
+            .main{position: absolute; max-width: none; padding: 0}}
             @media only screen and (min-width: 455px) and (max-width: 810px){
             h1{font-size: 6.56vw}}
             @media only screen and (min-width: 810px) {
