--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -51,6 +51,7 @@
             <div>I wonder if anyone's ever come down here</div>
             <div>Why do songs keep getting stuck in my head...</div>
             <div>Hate only brings you hate.</div>
+            <div>This site is driving me nuts</div>
             <div>being good feels good.</div>
             <div>"est. 2022" that's gonna sound marginally cool in a couple months</div>
             <div>I don't know if adding that guestbook was a good idea</div>
