--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -8,6 +8,7 @@
         body{background-image:url(background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
+            background-attachment: fixed;
             color: #101010;
             font-family: 'Literata', serif;}
         .main{padding-top: 20px}
@@ -31,7 +32,8 @@
             body{background-color: #d4d4d4;
             background-image:none}
             .main{background-image:url(background.jpg);
-            box-shadow: #40404080 0 0 8px}
+                background-attachment: fixed;
+                box-shadow: #40404080 0 0 8px}
         }
         </style>
     </head>
