--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>blender: buttons</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
         #images img{width: 100%; margin-top: 12px}
         @media only screen and (max-width: 500px) {
