--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>blender: pyramids</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {background-color: #000429;color: #ddba39;}
         a{color: #ddba39}
         a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
