--- a/buttons.html
+++ b/buttons.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
-        <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{--light-blue: #b8cadf;
                 --dark-blue: #9dafc3;
                 --grey: #5d5e6c;
