--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
         <title>{ruler and compass}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image:url(background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
