--- a/musicians.html
+++ b/musicians.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>musicians</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         a.bandcamp, a.bandcampbold{text-decoration-color: #00a2ff;}
             a.bandcamp:hover, a.bandcampbold:hover{background-color: #00a2ff; color: #404040}
 
