--- a/sitelog.html
+++ b/sitelog.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <title>sitelog</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {
             background-color: #101010;
             color: #ffa900;
