--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
-        <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #d4d4d4}
             .page{width: min(90%, 45rem); background-color: #f0f0f0; border: none; margin: 0 auto}
             a.buttons:hover{background-color: #7ba0cc; 
